# playcha

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.binary  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/playcha/: __init__.py  __main__.py  app.py  config.py  dtos.py  sessions.py  solver.py
tests/: conftest.py  test_challenge.py  test_health.py  test_request_get.py  test_request_post.py  test_sessions.py
tests/mock_pages/: challenge.html  plain.html
