[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playcha"
version = "1.0.0"
description = "FlareSolverr-compatible API using Playwright + Camoufox for challenge solving"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "camoufox[geoip]",
    "playwright-captcha",
    "2captcha-python-async",
    "aiofiles",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]
binary = [
    "pyinstaller",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]
per-file-ignores = {"src/playcha/dtos.py" = ["N815"]}  # camelCase fields required for FlareSolverr compat

[tool.ruff.lint.isort]
known-first-party = ["playcha"]

[tool.ruff.format]
quote-style = "double"
