[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playcha"
version = "0.0.4"
description = "FlareSolverr-compatible API using Playwright + Camoufox for challenge solving"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "camoufox[geoip]",
    "playwright-captcha",
    "2captcha-python-async",
]

[project.scripts]
playcha = "playcha.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "httpx",
    "aiohttp",
    "ruff",
]
binary = [
    "pyinstaller",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 120
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]
per-file-ignores = {"src/playcha/dtos.py" = ["N815"], "tests/**" = ["N815"]}  # camelCase fields required for FlareSolverr compat

[tool.ruff.lint.isort]
known-first-party = ["playcha"]

[tool.ruff.format]
quote-style = "double"
